added background for wrapper set animation added car set position

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="car"></div>
-        <div class="wheel"></div>
+        <div class="car">
+        <div class="wheel1"></div>
+        <div class="wheel2"></div>
+        </div>
         <div class="smoke"></div>
     </div>
 </body>
