--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="car">
-        <div class="wheel1"></div>
-        <div class="wheel2"></div>
-        </div>
-        <div class="smoke"></div>
-    </div>
+<div class="main">
+    <div class="wrapper"></div>
+    <div class="car"></div>
+    <div class="wheel1"></div>
+    <div class="wheel2"></div>
+    <div class="smoke"></div>
+</div>
 </body>
 </html>
