all synconized animation starts with deley of 2 seconds smoke not added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <div class="main">
     <div class="wrapper"></div>
     <div class="car"></div>
-    <div class="wheel1"></div>
-    <div class="wheel2"></div>
+    <div class="move1">
+        <div class="wheel1"></div>
+    </div>
+    <div class="move2">
+        <div class="wheel2"></div>
+    </div>
     <div class="smoke"></div>
 </div>
 </body>
