spoiler added start position was set

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="wheel2"></div>
     </div>
     <div class="smoke"></div>
+    <div class="spoiler"></div>
 </div>
 </body>
 </html>
