spoiler up and spoiler move ready

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div class="smoke"></div>
     <div class="spoiler"></div>
+    <div class="spoiler_move"></div>
 </div>
 </body>
 </html>
