All done. Seems like looks fine and funny .   )))

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div class="smoke"></div>
     <div class="spoiler"></div>
     <div class="spoiler_move"></div>
+    <div class="fire"></div>
+    <div class="fire_start"></div>
 </div>
 </body>
 </html>
